<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">


    <AbsoluteLayout
        android:layout_width="369dp"
        android:layout_height="match_parent"
        android:background="@drawable/backgound"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tipoEstablecimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="26dp"
            android:layout_y="14dp"
            android:text="@string/tipoEstablecimiento" />

        <TextView
            android:id="@+id/tv_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="192dp"
            android:layout_y="126dp" />

        <TextView
            android:id="@+id/tv_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="192dp"
            android:layout_y="152dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_x="24dp"
            android:layout_y="67dp"
            android:text="@string/nombreEncargado" />

        <TextView
            android:id="@+id/tv_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="192dp"
            android:layout_y="98dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="23dp"
            android:layout_y="94dp"
            android:text="@string/Direccion" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="191dp"
            android:layout_y="69dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="23dp"
            android:layout_y="122dp"
            android:text="@string/correo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_x="24dp"
            android:layout_y="41dp"
            android:text="@string/entidadCargo" />

        <TextView
            android:id="@+id/tv_entidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="190dp"
            android:layout_y="40dp" />

        <TextView
            android:id="@+id/tv_establecimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="190dp"
            android:layout_y="14dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="22dp"
            android:layout_y="152dp"
            android:text="@string/telefono" />
    </AbsoluteLayout>
</android.support.v7.widget.CardView>
